--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -391,10 +391,10 @@ EXTRAS
                 <div class="col-12">
                   <h2>Offerta del giorno</h2>
                 </div>
-                <div class="col">
-                  <div>
+                  <div class="col">
                     <img src="immagini riferimento/830984.jpg" width="200px" />
-                    <div>
+                </div>
+                    <div class="col">
                       <h3>Fashifu Maldive</h3>
                       <p>15.01.20021-31.01.2021</p>
                       <p>Ville a paritre da 500$</p>
@@ -402,32 +402,34 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-              </div>
-            </div>
+            
             <!-- fine offerta del giorno/inzio Last Minute -->
+            <h3>Last Minute</h3>
             <div class="container text-center">
               <div class="row g-2">
-                <div class="col-6">
-                  <img src="immagini riferimento/830984.jpg" width="100%" />
+                <div class="col-6 rounded">
+                  <img class="rounded" src="immagini riferimento/830984.jpg" width="100%" />
                 </div>
                 <div class="col-6">
-                  <img src="immagini riferimento/830984.jpg" width="100%" />
+                  <img class="rounded" src="immagini riferimento/830984.jpg" width="100%" />
+                </div>
+                <div class="col-6 rounded">
+                  <img class="rounded" src="immagini riferimento/830984.jpg" width="100%" />
                 </div>
                 <div class="col-6">
-                  <img src="immagini riferimento/830984.jpg" width="100%" />
+                  <img class="rounded" src="immagini riferimento/830984.jpg" width="100%" />
+                </div>
+                <div class="col-6 rounded">
+                  <img class="rounded" src="immagini riferimento/830984.jpg" width="100%" />
                 </div>
                 <div class="col-6">
-                  <img src="immagini riferimento/830984.jpg" width="100%" />
+                  <img class="rounded" src="immagini riferimento/830984.jpg" width="100%" />
                 </div>
-                <div class="col-6">
-                  <img src="immagini riferimento/830984.jpg" width="100%" />
-                </div>
-                <div class="col-6">
-                  <img src="immagini riferimento/830984.jpg" width="100%" />
-                </div>
+                
               </div>
             </div>
           </main>
+        </div>
         </div>
       </div>
     </div>
