--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -151,7 +151,7 @@ EXTRAS
                 placeholder="Cerca Posti da Sogno"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
+              <button class="btn btn-outline-danger" type="submit">
                 Search
               </button>
             </form>
@@ -196,7 +196,7 @@ EXTRAS
             <!-- fine piccolo div/ inzio card -->
             <div class="container" id="saldi">
               <div class="row g-2">
-                <div class="col-6">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div
                     id="ciao1"
                     class="card border border-info"
@@ -218,7 +218,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div
                     id="ciao1"
                     class="card border border-info"
@@ -240,7 +240,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4 col-lg-3"">
                   <div
                     id="ciao1"
                     class="card border border-info"
@@ -262,7 +262,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 d-block d-md-none d-lg-block col-lg-3">
                   <div
                     id="ciao1"
                     class="card border border-info"
@@ -297,7 +297,7 @@ EXTRAS
             <!-- fine piccolo div/ inzio card -->
             <div class="container">
               <div class="row g-2">
-                <div class="col-6">
+                <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
                     <img
                       src="immagini riferimento/830984.jpg "
@@ -315,7 +315,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
                     <img
                       src="immagini riferimento/830984.jpg "
@@ -333,7 +333,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
                     <img
                       src="immagini riferimento/830984.jpg "
@@ -351,7 +351,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
                     <img
                       src="immagini riferimento/830984.jpg "
@@ -369,7 +369,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
                     <img
                       src="immagini riferimento/830984.jpg "
@@ -387,7 +387,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
                     <img
                       src="immagini riferimento/830984.jpg "
@@ -405,6 +405,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
+             
               </div>
             </div>
             <!-- Fine card/inzio offerta del giorno -->
@@ -433,48 +434,49 @@ EXTRAS
             <h3 class="mt-3">Last Minute</h3>
             <div class="container">
               <div class="row g-2">
-                <div class="col-6 rounded">
+                <div class="col-6 col-md-4 col-lg-2 rounded">
                   <img
                     class="rounded"
                     src="immagini riferimento/830984.jpg"
                     width="100%"
                   />
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4 col-lg-2 rounded">
                   <img
                     class="rounded"
                     src="immagini riferimento/830984.jpg"
                     width="100%"
                   />
                 </div>
-                <div class="col-6 rounded">
+                <div class="col-6 col-md-4 col-lg-2 rounded">
                   <img
                     class="rounded"
                     src="immagini riferimento/830984.jpg"
                     width="100%"
                   />
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4 col-lg-2 rounded">
                   <img
                     class="rounded"
                     src="immagini riferimento/830984.jpg"
                     width="100%"
                   />
                 </div>
-                <div class="col-6 rounded">
+                <div class="col-6 col-md-4 col-lg-2 rounded">
                   <img
                     class="rounded"
                     src="immagini riferimento/830984.jpg"
                     width="100%"
                   />
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4 col-lg-2 rounded">
                   <img
                     class="rounded"
                     src="immagini riferimento/830984.jpg"
                     width="100%"
                   />
                 </div>
+                
               </div>
             </div>
             <!-- fine last minute e inizio di dicono di noi -->
