--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -240,7 +240,7 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-3"">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div
                     id="ciao1"
                     class="card border border-info"
@@ -299,12 +299,18 @@ EXTRAS
               <div class="row g-2">
                 <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
-                    <img
-                      src="immagini riferimento/830984.jpg "
-                      width="100%"
-                      class="card-img-top"
-                      alt="..."
-                    />
+                    <div class="position-relative">
+                      <img
+                        src="immagini riferimento/830984.jpg "
+                        width="100%"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <span
+                        class="position-absolute end-0 translate-badge badge text-bg-danger"
+                        >HOT</span
+                      >
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
@@ -317,12 +323,18 @@ EXTRAS
                 </div>
                 <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
-                    <img
-                      src="immagini riferimento/830984.jpg "
-                      width="100%"
-                      class="card-img-top"
-                      alt="..."
-                    />
+                    <div class="position-relative">
+                      <img
+                        src="immagini riferimento/830984.jpg "
+                        width="100%"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <span
+                        class="position-absolute end-0 translate-badge badge text-bg-danger"
+                        >HOT</span
+                      >
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
@@ -335,12 +347,18 @@ EXTRAS
                 </div>
                 <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
-                    <img
-                      src="immagini riferimento/830984.jpg "
-                      width="100%"
-                      class="card-img-top"
-                      alt="..."
-                    />
+                    <div class="position-relative">
+                      <img
+                        src="immagini riferimento/830984.jpg "
+                        width="100%"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <span
+                        class="position-absolute end-0 translate-badge badge text-bg-danger"
+                        >HOT</span
+                      >
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
@@ -353,12 +371,18 @@ EXTRAS
                 </div>
                 <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
-                    <img
-                      src="immagini riferimento/830984.jpg "
-                      width="100%"
-                      class="card-img-top"
-                      alt="..."
-                    />
+                    <div class="position-relative">
+                      <img
+                        src="immagini riferimento/830984.jpg "
+                        width="100%"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <span
+                        class="position-absolute end-0 translate-badge badge text-bg-danger"
+                        >HOT</span
+                      >
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
@@ -371,12 +395,18 @@ EXTRAS
                 </div>
                 <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
-                    <img
-                      src="immagini riferimento/830984.jpg "
-                      width="100%"
-                      class="card-img-top"
-                      alt="..."
-                    />
+                    <div class="position-relative">
+                      <img
+                        src="immagini riferimento/830984.jpg "
+                        width="100%"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <span
+                        class="position-absolute end-0 translate-badge badge text-bg-danger"
+                        >HOT</span
+                      >
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
@@ -389,12 +419,18 @@ EXTRAS
                 </div>
                 <div class="col-6 col-lg-4">
                   <div class="card" id="ciao2" style="width: 100%">
-                    <img
-                      src="immagini riferimento/830984.jpg "
-                      width="100%"
-                      class="card-img-top"
-                      alt="..."
-                    />
+                    <div class="position-relative">
+                      <img
+                        src="immagini riferimento/830984.jpg "
+                        width="100%"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <span
+                        class="position-absolute end-0 translate-badge badge text-bg-danger"
+                        >HOT</span
+                      >
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
@@ -405,7 +441,6 @@ EXTRAS
                     </div>
                   </div>
                 </div>
-             
               </div>
             </div>
             <!-- Fine card/inzio offerta del giorno -->
@@ -476,7 +511,6 @@ EXTRAS
                     width="100%"
                   />
                 </div>
-                
               </div>
             </div>
             <!-- fine last minute e inizio di dicono di noi -->
